@@ -44,7 +44,7 @@ public class FloatResponseHandler extends AbstractNumberResponseHandler {
 	@SuppressWarnings("unchecked")
 	@Override
 	protected <T> T handle(String response) {
-		return (T) new Float(response);
+		return (T) Float.valueOf(response);
 	}
 
 }
